1998-12-17  Alex Roberts <bse@dial.pipex.com>

	* Makefile.am: added Fred's ctags plugin to  'if WITH_GNOME', as it uses
	  features that will not work with gtk 1.0.x, and when it is finished will
	  probably only use features in Gnome...
	
	* Makefile.am: Tidied up erroneous if WITH_GNOME's... all under ONE 
	  'if WITH_GNOME'... No need to check multiple times...

1998-12-15  Jeff Garzik  <jgarzik@Pobox.com>

	* spell/spell.c:  s/gtk_spell/gnome_spell/

1998-12-05  Alex Roberts  <bse@dial.pipex.com>

	* browser/*: New plugin... Web Browser.. see ../README.plugins...

1998-11-27  Chris Lahey  <clahey@umich.edu>

	* Makefile.am (SUBDIRS): Switched client and ctag so that it'd
	compile in the right order.

1998-11-03  Seth Alves  <alves@hungry.com>

	* spell/spell.c: poptification

1998-10-23  Martin Baulig  <martin@home-of-linux.org>

	* shell/main.c: Add callback to close the window when the shell exits.

	* launcher/launcher-server.c: Don't use installed header files.

1998-10-22  Martin Baulig  <martin@home-of-linux.org>

	* launcher: New plugin. This is a `Document Launcher' which is
	implemented as a CORBA server.
	
	* idl, goad: New directories for plugins that use CORBA.

1998-10-22  Martin Baulig  <martin@home-of-linux.org>

	* shell: New plugin. This is a gmodule plugin which uses libzvt
	from gnome-libs/zvt.

1998-10-14  Alex Roberts  <bse@dial.pipex.com>

	* gmodule_plugin_howto: Fixed typo, it's "gEdit" NOT "GEdit"!!

1998-10-14  Martin Baulig  <martin@home-of-linux.org>

	* gmodule_plugin_howto: New file. Contains documentation about
	the new GModule Plugin Interface.

1998-10-13  Martin Baulig  <martin@home-of-linux.org>

	* client/client.c: Added the following functions:
	`client_document_set_auto_indent', `client_document_set_status_bar',
	`client_document_set_word_wrap', `client_document_set_read_only',
	`client_document_set_split_screen', `client_document_set_scroll_ball'.
	
1998-10-13  Martin Baulig  <martin@home-of-linux.org>
