@@ -1,3 +1,9 @@
+1999-01-18  Alex Roberts <bse@dial.pipex.com>
+
+	* Started converting Plugins to Gnome...
+	
+	* Done (almost) Email and Convert
+
 1998-12-17  Alex Roberts <bse@dial.pipex.com>
 
 	* Makefile.am: added Fred's ctags plugin to  'if WITH_GNOME', as it uses
